--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>The Pyschic Game</h1>\
+    <h1>The Pyschic Game</h1>
     <br>
     <div>
         <p>Press any letter key to play & Guess the letter I'm thinking of</p>
